deployment/app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guidking
  labels:
    run: guidking
