deployment/namespace-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guidking
  labels:
    name: guidking
