deployment/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: guidking
  labels:
    app: app
spec:
  containers:
    - name: guidking-api
      image: guidking-api:latest
      imagePullPolicy: Never
      args:
        - "-http=0.0.0.0:80"
        - "-health=0.0.0.0:81"
        - "-secret=secret"
      ports:
        - name: http
          containerPort: 80
      resources:
        limits:
          cpu: 0.2
          memory: "200Mi"
