deployment/deployment-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: guidking-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: guidking-api
        track: stable
    spec:
      containers:
        - name: guidking-api
          image: "guidking-api:latest"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: 0.2
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /readiness
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 1
