deployment/deployment-mongo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo
  labels:
    run: mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - name: mongo-port
              containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      restartPolicy: Always
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-persistent-storage
