deployment/guidking-com-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: guidking-com-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: guidking-com
  template:
    metadata:
      labels:
        component: guidking-com
    spec:
      containers:
        - name: guidking-com
          image: "guidking-com:latest"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8000
          resources:
            limits:
              cpu: 0.2
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
