deployment/pod-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: guidking
  labels:
    name: guidking-api
spec:
  containers:
    - name: guidking-api
      image: guidking-api:latest
      imagePullPolicy: Never
      args:
        - "-secret=secret"
      ports:
        - name: http
          containerPort: 3000
      resources:
        limits:
          cpu: 0.2
          memory: "256Mi"
