deployment/guidking-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guidking-api-service
spec:
  selector:
    component: guidking-api
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
    # nodePort: 32767
  # type: NodePort
  type: ClusterIP
