deployment/guidking-com-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guidking-com-service
spec:
  selector:
    component: guidking-com
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
    # nodePort: 32765
  # type: NodePort
  type: ClusterIP
