deployment/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  ports:
    - name: "21017"
      port: 27017
      targetPort: 27017
  selector:
    run: mongo
