deployment/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    run: mongo
spec:
  ports:
    - name: "21017"
      port: 27017
      targetPort: 27017
  selector:
    run: mongo
